--- a/Q3_2GCesiumLabastilla.html
+++ b/Q3_2GCesiumLabastilla.html
@@ -12,6 +12,21 @@
     <link rel="stylesheet" href="../../styles.css" />
     <link rel="icon" href="../../assets/pshslogo.png" sizes="32x32" type="image/png">
     <script src="script.js" defer></script>
+
+    <script>
+      // Function to confirm form submission
+      function confirmSubmission(event) {
+          // Show confirmation dialog
+          const userConfirmed = confirm("Are you sure you want to submit this form?");
+          
+          // If user clicks Cancel, prevent form submission
+          if (!userConfirmed) {
+              event.preventDefault(); // Stops form from submitting
+              alert("Form submission canceled.");
+          }
+      }
+  </script>
+
    <style>
     body{
         padding: 25px;
@@ -143,14 +158,20 @@
  
         <fieldset>
           <legend>Action Buttons</legend>
-          <button type="submit"> Accept </button>
-          <input type="reset" value=" Clear " />
+          <button type="submit"> Submit </button>
+          <button type="reset">Reset </button> 
 
 
         </fieldset>
 
 
       </form>
+
+      <script>
+        // Attach the confirm function to the form's onsubmit event
+        document.getElementById("dForm").addEventListener("submit", confirmSubmission);
+    </script>
+
     </section>
     <script src="q3e3script.js"></script>
   </body>
